--- a/src/root.css
+++ b/src/root.css
@@ -1,3 +1,5 @@
+@import-normalize; /* bring in normalize.css styles */
+
 @import url('https://fonts.googleapis.com/css?family=Merriweather:400,400i,700');
 
 * {
