Remove animation, simplify theming

--- a/src/root.css
+++ b/src/root.css
@@ -35,49 +35,37 @@ body {
 }
 
 :root {
-  --primary-color: #302ae6;
-  --secondary-color: #536390;
-  --font-color: #424242;
-  --bg-color: #fff;
-  --heading-color: #292922;
-
-  --red: #0f0e0e;
-  --bgColor: var(--red);
-
-  --basFontSize: 1rem;
-
-  --baseNavSize: 0.64rem;
-  --smallFontSize: 0.8rem;
+  --color-primary: #302ae6;
+  --color-secondary: #536390;
+  --color-font: #424242;
+  --color-bg: #fff;
+  --color-heading: #292922;
+  --font-base: 1rem;
+  --nav-base: 0.64rem;
+  --font-small: 0.8rem;
+  --margin-base: 5em;
 }
 
 [app-theme='light'] {
-  --primary-color: #9a97f3;
-  --secondary-color: #818cab;
-  --font-color: #e1e1ff;
-  --bg-color: red;
-  --heading-color: #818cab;
+  --color-primary: #302ae6;
+  --color-secondary: #536390;
+  --color-font: black;
+  --color-bg: white;
+  --color-heading: #292922;
 }
 
 [app-theme='dark'] {
-  --primary-color: #9a97f3;
-  --secondary-color: #818cab;
-  --font-color: #e1e1ff;
-  --bg-color: #161625;
-  --heading-color: #818cab;
+  --color-primary: #302ae6;
+  --color-secondary: #536390;
+  --color-font: white;
+  --color-bg: black;
+  --color-heading: #292922;
 }
 
 body,
 html {
   background-color: var(--bg-color);
-  color: var(--font-color);
+  color: var(--color-font);
   margin: 0;
   height: 100%;
-}
-
-h1 {
-  color: var(--secondary-color);
-}
-
-a {
-  color: var(--primary-color);
 }
